tests/snapshots/document__it_can_parse_document_with_comments.snap
---
source: tests/document.rs
expression: ast
---
{
  "treeType": "document",
  "nodes": [
    {
      "element": {
        "id": null,
        "name": "html",
        "variant": "normal",
        "attributes": {},
        "classes": [],
        "nodes": []
      }
    }
  ]
}
