tests/snapshots/document__it_can_parse_minimal_document.snap
---
source: tests/document.rs
expression: dom
---
{
  "treeType": "document",
  "nodes": [
    {
      "name": "html",
      "variant": "normal"
    }
  ]
}
